[metadata]
name = kyanit_buildtools
description = Tools for building Kyanit components.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyanit-project/kyanit-buildtools
author = Zsolt Nagy
author_email = zsolt@kyanit.eu
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    semver>=2,<3
    pdoc3>=0,<1
python_requires = >=3.8

[bdist_wheel]
universal = True
