[metadata]
name = kyanit-buildtools
description = Build tools for Kyanit
url = https://github.com/kyanit-project/kyanit-buildtools
author = Zsolt Nagy
author_email = zsolt@kyanit.eu
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Operating System :: Unix

[options]
packages = kyanit_buildtools
install_requires =
  pdoc3>=0.8,<1
  semver>=2,<3
  esptool>=2,<3
python_requires = ~=3.8

[options.entry_points]
console_scripts =
    kyanit-docgen = kyanit_buildtools.docgen:command_line
    kyanit-versioning = kyanit_buildtools.versioning:command_line
    kyanit-builder = kyanit_buildtools.builder:command_line

[bdist_wheel]
universal = True
